--- a/NumberPad/Base.lproj/Main.storyboard
+++ b/NumberPad/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="TqI-qv-71v">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Intro View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="NumberPad" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="IntroViewController" customModule="NumberPad" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,73 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="yIV-uG-Pqw">
+                                <rect key="frame" x="233" y="0.0" width="135" height="600"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ZE-rA-Zne">
+                                        <rect key="frame" x="0.0" y="0.0" width="135" height="200"/>
+                                        <animations/>
+                                        <state key="normal" image="whiteboard"/>
+                                        <connections>
+                                            <action selector="startSandbox:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DIa-oe-ImB"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fpt-yS-Bbt">
+                                        <rect key="frame" x="0.0" y="200" width="135" height="200"/>
+                                        <animations/>
+                                        <state key="normal" image="circleToy"/>
+                                        <connections>
+                                            <action selector="startCircumferenceDemo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="92g-Cm-W9D"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66T-Ft-5T1">
+                                        <rect key="frame" x="0.0" y="400" width="135" height="200"/>
+                                        <animations/>
+                                        <state key="normal" image="football"/>
+                                        <connections>
+                                            <action selector="startFootballDemo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AjZ-16-sg5"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                            </stackView>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yIV-uG-Pqw" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="2JF-uj-hFo"/>
+                            <constraint firstItem="yIV-uG-Pqw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2bD-KG-vcT"/>
+                            <constraint firstAttribute="bottom" secondItem="yIV-uG-Pqw" secondAttribute="bottom" id="FGM-Xj-PMg"/>
+                            <constraint firstItem="yIV-uG-Pqw" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="uxO-UM-egW"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="xb8-jL-I5d"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="4vi-yx-ytN">
+            <objects>
+                <navigationController navigationBarHidden="YES" id="TqI-qv-71v" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4wb-aa-Gbp">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="N6G-ot-6d5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Uc-I7-AGK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-488" y="313"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="circleToy" width="135" height="136"/>
+        <image name="football" width="125" height="75"/>
+        <image name="whiteboard" width="135" height="135"/>
+    </resources>
 </document>
