Get app to build-and-run stage in swift 3.

--- a/NumberPad/Base.lproj/Main.storyboard
+++ b/NumberPad/Base.lproj/Main.storyboard
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="TqI-qv-71v">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="TqI-qv-71v">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--Intro View Controller-->
@@ -17,46 +16,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="yIV-uG-Pqw">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="yIV-uG-Pqw">
                                 <rect key="frame" x="233" y="0.0" width="135" height="600"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ZE-rA-Zne">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ZE-rA-Zne">
                                         <rect key="frame" x="0.0" y="0.0" width="135" height="150"/>
-                                        <animations/>
                                         <state key="normal" image="whiteboard"/>
                                         <connections>
-                                            <action selector="startSandbox:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DIa-oe-ImB"/>
+                                            <action selector="startSandboxWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tVe-bN-axl"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fpt-yS-Bbt">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fpt-yS-Bbt">
                                         <rect key="frame" x="0.0" y="150" width="135" height="150"/>
-                                        <animations/>
                                         <state key="normal" image="circleToy"/>
                                         <connections>
-                                            <action selector="startCircumferenceDemo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="92g-Cm-W9D"/>
+                                            <action selector="startCircumferenceDemoWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PI5-hh-55P"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xAJ-Bx-mXf">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xAJ-Bx-mXf">
                                         <rect key="frame" x="0.0" y="300" width="135" height="150"/>
-                                        <animations/>
                                         <state key="normal" image="pythagorean"/>
                                         <connections>
-                                            <action selector="startPythagoreanDemo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5tu-81-wIl"/>
+                                            <action selector="startPythagoreanDemoWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uw8-Ng-BmC"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66T-Ft-5T1">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66T-Ft-5T1">
                                         <rect key="frame" x="0.0" y="450" width="135" height="150"/>
-                                        <animations/>
                                         <state key="normal" image="football"/>
                                         <connections>
-                                            <action selector="startFootballDemo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AjZ-16-sg5"/>
+                                            <action selector="startFootballDemoWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ISm-av-1NO"/>
                                         </connections>
                                     </button>
                                 </subviews>
-                                <animations/>
                             </stackView>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="yIV-uG-Pqw" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="2JF-uj-hFo"/>
@@ -77,7 +70,6 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="4wb-aa-Gbp">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </navigationBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="N6G-ot-6d5"/>
